--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
   text-align: center;
   min-height: 100vh;
   display: flex;
-  background-image: url('/src/pexels-felix-mittermeier-956981.jpg');
+  /* background-image: url('/src/pexels-felix-mittermeier-956981.jpg'); */
   background-size: cover;
   background-position: center;
 }
