--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,48 +1,4 @@
-
-.App {
-  text-align: center;
-  min-height: 100vh;
+.search-nav {
   display: flex;
-  /* background-image: url('/src/pexels-felix-mittermeier-956981.jpg'); */
-  background-size: cover;
-  background-position: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.font-face-gm {
-  font-family: 'Montserrat-Light';
+  justify-content: space-between;
 }
