--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,15 @@
   display: flex;
   justify-content: space-between;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 0.281);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
