--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,15 @@
+
 .search-nav {
   display: flex;
   justify-content: space-between;
+}
+
+.convos {
+width: 100%;
+display: flex;
+justify-content: space-between;
+align-items: center;
+gap: 40px;
 }
 
 ::-webkit-scrollbar {
@@ -13,4 +22,28 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.App {
+  min-height: 100vh;
+  display: flex;
+  background-image: url("https://images.unsplash.com/photo-1557683304-673a23048d34?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=1600&q=60");
+  background-position: center;
+  background-size: cover;
+}
+.left-chatpage {
+  background-color: white;
+  margin: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  width: 400px;
+  /* width: 100%; */
+  height: 700px;
+}
+
+.chat-pop {
+  height: 50px;
 }
