--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,19 @@ gap: 40px;
 .chat-pop {
   height: 50px;
 }
+.chat-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.chat-box {
+  background-color: white;   
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  margin: 20px;
+  height: 700px;
+}
