--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,5 +61,31 @@ gap: 40px;
   flex-direction: column;
   border-radius: 10px;
   margin: 20px;
+  padding: 5px;
+  padding-left: 5px;
+  padding-right: 6px;
   height: 700px;
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.chatbox-top {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.chat-messages{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100%;
+  height: 600px;
+  padding: 5px;
 }
